force-app/main/default/objects/Zaptilo_Config__c/Zaptilo_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-level configuration for the Zaptilo WhatsApp plugin. Stores the API token and default WABA. Protected from being exposed to standard users via field-level security.</description>
    <label>Zaptilo Config</label>
</CustomObject>