force-app/main/default/objects/Zaptilo_Config__c/fields/API_Token__c.field-meta.xml
<CustomField>
    <fullName>API_Token__c</fullName>
    <description>Bearer token used to authenticate against the Zaptilo API. Generate at web.zaptilo.ai under Settings → API Keys.</description>
    <label>API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>