force-app/main/default/objects/Zaptilo_Config__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <defaultValue>"https://web.zaptilo.ai"</defaultValue>
    <description>Zaptilo API base URL. Defaults to https://web.zaptilo.ai. Override only for self-hosted Zaptilo deployments.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>