force-app/main/default/objects/Zaptilo_Config__c/fields/Default_WABA__c.field-meta.xml
<CustomField>
    <fullName>Default_WABA__c</fullName>
    <description>Default WhatsApp Business Account ID or phone number to send from. Optional. If blank, Zaptilo uses the org's primary WABA.</description>
    <label>Default WABA</label>
    <length>64</length>
    <type>Text</type>
</CustomField>